// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should HW25Modal 1`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="arr-0"
      name="button"
    >
      modal
    </button>
    <button
      class="button"
      data-testid="arr-1"
      name="button"
    >
      top
    </button>
    <button
      class="button"
      data-testid="arr-2"
      name="button"
    >
      header
    </button>
    <button
      class="button"
      data-testid="arr-3"
      name="button"
    >
      animation
    </button>
    <button
      class="button"
      data-testid="arr-4"
      name="button"
    >
      top + animation
    </button>
    <div>
      <div
        class="modal-bg"
        data-testid="modal-bg"
        id="modal-bg"
      >
        <div
          class="modal-content "
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex vel in nam sint dolorum, eligendi delectus, dolor quos eum magni facere nemo fuga distinctio. Magni possimus aspernatur corrupti impedit laborum!
          <br />
          <button
            data-testid="close"
            id="button"
            name="button"
          >
            關閉
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should HW25Modal 2`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="arr-0"
      name="button"
    >
      modal
    </button>
    <button
      class="button"
      data-testid="arr-1"
      name="button"
    >
      top
    </button>
    <button
      class="button"
      data-testid="arr-2"
      name="button"
    >
      header
    </button>
    <button
      class="button"
      data-testid="arr-3"
      name="button"
    >
      animation
    </button>
    <button
      class="button"
      data-testid="arr-4"
      name="button"
    >
      top + animation
    </button>
  </div>
</div>
`;

exports[`should HW25Modal 3`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="arr-0"
      name="button"
    >
      modal
    </button>
    <button
      class="button"
      data-testid="arr-1"
      name="button"
    >
      top
    </button>
    <button
      class="button"
      data-testid="arr-2"
      name="button"
    >
      header
    </button>
    <button
      class="button"
      data-testid="arr-3"
      name="button"
    >
      animation
    </button>
    <button
      class="button"
      data-testid="arr-4"
      name="button"
    >
      top + animation
    </button>
    <div>
      <div
        class="modal-bg"
        data-testid="modal-bg"
        id="modal-bg"
      >
        <div
          class="modal-content "
        >
          <h2>
            My Header
          </h2>
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex vel in nam sint dolorum, eligendi delectus, dolor quos eum magni facere nemo fuga distinctio. Magni possimus aspernatur corrupti impedit laborum!
          <br />
          <button
            data-testid="close"
            id="button"
            name="button"
          >
            關閉
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should HW25Modal 4`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="arr-0"
      name="button"
    >
      modal
    </button>
    <button
      class="button"
      data-testid="arr-1"
      name="button"
    >
      top
    </button>
    <button
      class="button"
      data-testid="arr-2"
      name="button"
    >
      header
    </button>
    <button
      class="button"
      data-testid="arr-3"
      name="button"
    >
      animation
    </button>
    <button
      class="button"
      data-testid="arr-4"
      name="button"
    >
      top + animation
    </button>
  </div>
</div>
`;

exports[`should HW25Modal 5`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="arr-0"
      name="button"
    >
      modal
    </button>
    <button
      class="button"
      data-testid="arr-1"
      name="button"
    >
      top
    </button>
    <button
      class="button"
      data-testid="arr-2"
      name="button"
    >
      header
    </button>
    <button
      class="button"
      data-testid="arr-3"
      name="button"
    >
      animation
    </button>
    <button
      class="button"
      data-testid="arr-4"
      name="button"
    >
      top + animation
    </button>
    <div>
      <div
        class="modal-bg"
        data-testid="modal-bg"
        id="modal-bg"
      >
        <div
          class="modal-content "
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex vel in nam sint dolorum, eligendi delectus, dolor quos eum magni facere nemo fuga distinctio. Magni possimus aspernatur corrupti impedit laborum!
          <br />
          <button
            data-testid="close"
            id="button"
            name="button"
          >
            關閉
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
